<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialogNewResource"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="?dialogPreferredPadding"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutResourceName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/resource_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputResourceName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutResourceUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/resource_url">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputResourceUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkBoxResource"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply_resource_globally" />

</LinearLayout>