<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardClass"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="16dp"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layoutClassMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layoutClassClickable"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/classNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:width="60dp"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:padding="@dimen/main_padding"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/classDate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:padding="@dimen/main_padding"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/classFlagsGroup"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center|end"
                android:orientation="horizontal"
                android:padding="@dimen/main_padding">

                <ImageButton
                    android:id="@+id/flagClassPlanned"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:contentDescription="@string/class_planned"
                    android:padding="4dp"
                    android:src="@drawable/ic_planning" />

                <ImageButton
                    android:id="@+id/flagMaterialSent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:contentDescription="@string/material_sent"
                    android:padding="4dp"
                    android:src="@drawable/ic_email" />

                <ImageButton
                    android:id="@+id/flagAttendanceTaken"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:contentDescription="@string/attendance_taken"
                    android:padding="4dp"
                    android:src="@drawable/ic_attendance" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutClassSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutClassMain">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:width="60dp"
                android:background="@color/colorPrimary"
                android:padding="@dimen/main_padding"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="@dimen/main_padding">

                <ImageButton
                    android:id="@+id/buttonAddResource"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:background="@drawable/roundcorner_accent"
                    android:contentDescription="@string/class_planned"
                    android:padding="4dp"
                    android:src="@drawable/ic_add" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>